testsuite/tests/grammar/invalid_lexers/bad_rule_1.lkt
import common

lexer foo_lexer {
    lexer bar_lexer {
    }
}
